新增助手自动更新功能，支持跳过，强制更新